--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-uglify": "~1.5.1",
     "lodash": "^4.5.0",
     "mocha": "^2.4.5",
-    "mocha-appveyor-reporter": "~0.1.0",
+    "mocha-appveyor-reporter": "https://github.com/gerich-home/mocha-appveyor-reporter/archive/v0.1.1.tar.gz",
     "requirejs": "^2.1.22",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
