--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-mocha": "~2.2.0",
     "gulp-mocha-phantomjs": "~0.11.0",
     "gulp-rename": "~1.2.2",
+    "gulp-tslint": "^4.3.3",
     "gulp-typescript": "^2.12.0",
     "gulp-uglify": "^1.5.3",
     "knockout": "^3.4.0",
@@ -32,6 +33,7 @@
     "mocha": "^2.4.5",
     "mocha-appveyor-reporter": "^0.2.0",
     "requirejs": "^2.1.22",
+    "tslint": "^3.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
